infra/k8s/comment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment
  labels:
    app: comment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
      - name: comment
        image: saketmishra31/blogcomment
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        # ports:
        # - containerPort: <Port>
---
apiVersion: v1
kind: Service
metadata:
  name: comment-service
spec:
  selector:
    app: comment
  ports:
  - port: 4002
    targetPort: 4002
