infra/k8s/eventbus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventbus
  labels:
    app: eventbus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventbus
  template:
    metadata:
      labels:
        app: eventbus
    spec:
      containers:
      - name: eventbus
        image: saketmishra31/eventbus
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        # ports:
        # - containerPort: <Port>
---
apiVersion: v1
kind: Service
metadata:
  name: eventbus-service
spec:
  selector:
    app: eventbus
  ports:
  - port: 4005
    targetPort: 4005
