infra/k8s/ingress_proj.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-serv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex : 'true'
  labels:
    name: ingress-serv
spec:
  rules:
  - host: posts.com
    http:
      paths:
      - pathType: Prefix
        path: "/api/v1/blog/post"
        backend:
          service:
            name: posts-service
            port: 
              number: 4001
      - pathType: Prefix
        path: "/api/v1/blog/post/?(.*)/comment"
        backend:
          service:
            name: comment-service
            port: 
              number: 4002 
      - pathType: Prefix
        path: "/api/v1/blog/post/query"
        backend:
          service:
            name: query-service
            port: 
              number: 4003
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: ui-service
            port: 
              number: 3000
